fix pag pozition and gallery ul wrap

--- a/src/sass/utilities/_mixins.scss
+++ b/src/sass/utilities/_mixins.scss
@@ -49,3 +49,44 @@
     color: $color;
   }
 }
+
+@mixin mq($range) {
+  $mobile: 480px;
+  $tablet: 768px;
+  $desktop: 1024px;
+
+  @if $range==mobile-only {
+    @media screen and (max-width: #{$tablet - 0.02}) {
+      @content;
+    }
+  } @else if $range==mobile {
+    @media screen and (min-width: $mobile) {
+      @content;
+    }
+  } @else if $range==tablet-only {
+    @media screen and (min-width: $tablet) and (max-width: #{$desktop - 0.02}) {
+      @content;
+    }
+  } @else if $range==tablet {
+    @media screen and (min-width: $tablet) {
+      @content;
+    }
+  } @else if $range==desktop {
+    @media screen and (min-width: $desktop) {
+      @content;
+    }
+  } @else if $range==notDesktop {
+    @media screen and (max-width: #{$desktop - 0.02}) {
+      @content;
+    }
+  } @else if $range==retina {
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (-moz-min-device-pixel-ratio: 2),
+      screen and (-o-min-device-pixel-ratio: 2/1),
+      screen and (-webkit-min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      @content;
+    }
+  }
+}
